# simpeg

./: '  .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .gitignore.orig  .mailmap  .pre-commit-config.yaml  .travis.yml  0.3.6b0  AUTHORS.rst  CITATION.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  GitExtensions.settings  LICENSE  MANIFEST.in  MT 1D code test.ipynb  MT Script - 3D.ipynb  MT Script - 3D_seogi.ipynb  MT Script-3D_layerTest-working.ipynb  MT Script-3D_layerTest.ipynb  MT Script-3D_twoHalfspace-simpegMT.ipynb  MT1DfwdProblem.ipynb  MTanayltic1Dtest-Copy1.ipynb  MTanayltic1Dtest.ipynb  Makefile  PROJECTS.rst  README.md  README.rst  SimPEG.py  Untitled.ipynb  appveyor.yml  azure-pipelines.yml  codecov.yml  credentials.tar.gz.enc  environment.yml  environment_test.yml  meta.yaml  (+10 more)
 minutes/: .~lock.2013-07-11.doc#  2013-06-04.doc  2013-06-26.doc  2013-07-11.doc  2013-07-11.html  template.doc
.azure-pipelines/: docs.yml  matrix.yml  pypi.yml  reviewdog_black.sh
.ci/: environment_test.yml  install_style.sh  matrix.yml  parse_style_requirements.py  requirements_style.txt
.ci/azure/: artifacts.yml  codecov.yml  deploy-dev-docs.sh  deploy-release-docs.sh  docs.yml  matrix.yml  old-docs.yml  pull.yml  pypi.yml  run_tests_with_coverage.sh  sandbox.yml  setup_env.sh  style.yml  test.yml
.github/: pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml  maintenance.md  post-install.yml  release-checklist.md  release.yml
.github/workflows/: actions.yml  issue_to_jira.yml  pr_add_jira_summary.yml  pull_request.yml  python_deploy_dev.yml  python_deploy_prod.yml  zizmor-security-mira.yml  zizmor-security-upstream.yml  zizmor-security.yml  zizmor.yml
GCEtools/: PETScIO.py  petscStartup.sh
SimPEG/: BaseMesh.py  Data.py  DataMisfit.py  Depreciate.py  DiffOperators.py  Directives.py  EMforward.py  Fields.py  GaussNewton.py  InnerProducts.py  InvProblem.py  Inversion.py  LogicallyOrthogonalMesh.py  LomView.py  Maps.py  Model.py  Models.py  NewFields.py  NewSurvey.py  ObjFunction.py  ObjectiveFunction.py  OldFields.py  OldSurvey.py  Old_DataMisfit.py  Optimization.py  Parameters.py  Problem.py  PropMaps.py  Props.py  Receiver.py  Regularization.py  Rules.py  Simulation.py  Solver.py  Survey.py  TensorMesh.py  TensorView.py  Tests.py  __init__.py  data.py  (+34 more)
SimPEG/DC/: __init__.py
SimPEG/DCIP/: BaseDC.py  BaseIP.py  DCIPUtils.py  Utils.py  __init__.py
SimPEG/EM/: Base.py  NewBase.py  OldBase.py  __init__.py  base.py  tmp_base.py
SimPEG/EldadsCode/: getDiffOps.py  getEdgeInnerProduct.py  getFaceInnerProduct.py  meshUtils.py  sputils.py
SimPEG/Examples/: DC.py  DC_Analytic_Dipole.py  DC_Forward_PseudoSection.py  DC_Forward_WennerArray.py  DC_PseudoSection_Simulation.py  DCfwd.py  EM_CylInversions_Heagyetal2016.py  EM_FDEM_1D_Inversion.py  EM_FDEM_Analytic_MagDipoleWholespace.py  EM_FDEM_Mu_Inversion.py  EM_FDEM_SusEffects.py  EM_Heagyetal2016_Casing.py  EM_Heagyetal2016_CasingFwd3DPrimSecSrc.py  EM_Heagyetal2016_CylInversions.py  EM_NSEM_1D_ForwardAndInversion.py  (+48 more)
Tutorials/: Linear.py
_simpeg/: simulation.py  version.py
ci/: deploy-docs.sh  deploy-pypi.sh
code/: BaseMesh.py  GaussNewton.py  MFDdriver.py  Mesh.py  TensorGrid.py  TensorMesh.py  TensorView.py  getCellVolume.py  getDiffOps.py  getEdgeInnerProduct.py  getEdgeTangent.py  getFaceNormals.py  inv3X3BlockDiagonal.py  meshUtils.py  ndgrid.py  sputils.py  tools.py  utils.py  zevel.py
codeScraps/: exSourceEL.ipynb  exSourceMD.ipynb  sourcesKris.py
docs/: Makefile  README.md  api_BaseMesh.rst  api_Cyl1DMesh.rst  api_DC.rst  api_DiffOperators.rst  api_DiffOps.rst  api_Examples.rst  api_FDEM.rst  api_FiniteVolume.rst  api_Forward.rst  api_ForwardProblem.rst  api_GaussNewton.rst  api_InnerProducts.rst  api_Inverse.rst  api_Inversion.rst  api_LOMView.rst  api_LogicallyOrthogonalMesh.rst  api_Maps.rst  api_Mesh.rst  api_MeshCode.rst  api_Model.rst  api_Optimization.rst  api_Optimize.rst  api_PF.rst  api_Parameters.rst  api_Problem.rst  api_Richards.rst  api_Solver.rst  api_Survey.rst  api_TDEM.rst  api_TDEM_derivation.rst  api_TensorMesh.rst  api_TensorView.rst  api_TestResults.rst  api_Tests.rst  api_Utilities.rst  api_Utils.rst  api_bigPicture.rst  api_installing.rst  (+10 more)
examples/: README.txt
notebooks/: 2DinvDC.ipynb  3D theroy overview.ipynb  3DRenderingWithvtkTools.ipynb  3DRenderingWithvtkTools.ipynb.orig  BFGS.ipynb  Bound Constraint Problem.ipynb  CircModel-Copy1.ipynb  CircModel.ipynb  CircModel_app.ipynb  DC forward.ipynb  DCR Pseudo-section Simulation.ipynb  DC_Forward_Live.ipynb  DC_schumberger_FWD.ipynb  DC_schumberger_Inv.ipynb  DCexample.ipynb  DCinverse.ipynb  Derivative test MT1D.ipynb  FDEMMagDipoleWholeSpace.ipynb  IPinverse.ipynb  MT 1D code_testLayered.ipynb  MT Script-3D_halfspace.ipynb  MT Script-3D_layerTest-working.ipynb  MT Script-3D_layerTest.ipynb  MT Script-3D_twoHalfspace-simpegMT.ipynb  MT1D inversion test-nr2.ipynb  MT1D inversion test.ipynb  MT1DfwdProblem.ipynb  MT1Dinversion_Scipy2015.ipynb  MT3D derivatives test.ipynb  MTanalytic1D_layerIssue.ipynb  SimPEG Tutorial - DC Fwr Problem.ipynb  SliceThroughModel.ipynb  Test FDEM Mag Dipole Wholespace.ipynb  Test ProblemMT1D.eFrom_TotalField.ipynb  ThreeMeshDC.ipynb  VisualizeWithvtkView-updated..ipynb  VisualizeWithvtkView-updated.ipynb  exLomPlots.ipynb  exPlotImage2D.ipynb
simpeg/: __init__.py  data.py  data_misfit.py  fields.py  foobar.py  inverse_problem.py  inversion.py  maps.py  objective_function.py  optimization.py  props.py  simulation.py  survey.py  version.py
simpegDC/: BaseDC.py  DC.py  __init__.py
simpegDCIP/: BaseDC.py  BaseIP.py  __init__.py
simpegEM/: Base.py  __init__.py
simpegMT/: Base.py  BaseMT.py  DataMT.py  FieldsMT.py  ProblemMT.py  SrcMT.py  SurveyMT.py  __init__.py
simpegPF/: BaseGrav.py  BaseMag.py  Ex_sir_Wathen.py  Gravity.py  GravityDriver.py  MagAnalytics.py  MagSurveyIE.py  Magnetics.py  MagneticsDriver.py  MagneticsIO.py  __init__.py
simpeg_t/: inverse_problem.py
tests/: Untitled.ipynb  conftest.py
(+2506 files in other folders)
